--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -2,14 +2,15 @@
     clip-path: polygon(0 15vh,100% 0,100% 100%,0 100%);
     -webkit-clip-path: polygon(0 15vh,100% 0,100% 100%,0 100%);
     text-align: center;
-    padding-top: 3%;
+    padding: 5% 0;
 
     .section-title {
-        margin-bottom: 3rem;
+        margin-bottom: 5%;
     }
 
-    p {
+    .proposal {
         font-size: 1.5rem;
+        margin-bottom: 2%;
     }
     
     .btn-primary {
