--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,11 +1,12 @@
 #projects {
+    padding: 5% 0;
     .project-container {
         width: 100%;
         display: flex;
         justify-content: space-around;
 
         &:not(:last-child) {
-            margin-bottom: 100px;
+            margin-bottom: 5%;
         }
         
         h3 {
@@ -38,14 +39,10 @@
 
 @media screen and (max-width: 991px) {
     #projects {
-        .section-title {
-            margin-top: 5%;
-        }
-        
         .project-container {
             flex-direction: column;
             &:not(:last-child) {
-                margin-bottom: 70px;
+                margin-bottom: 50px;
             }
 
             .project-description-container {
